--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,9 @@
-# Dependencies
-node_modules
-dist
-dist-server
+node_modules/
+dist/
+dist-server/
 .env
 .env.local
-
-# Logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# System
+*.log
 .DS_Store
 Thumbs.db
-
-# IDE
-.vscode
-.idea
-.gemini
-
-# Vercel
 .vercel
